# user-fastapi

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  setup.cfg  setup.py  skaffold.yaml
app/: __init__.py  main.py
app/config/: database.py
app/database/: connection.py
app/database/models/: users.py
app/services/: home_service.py  user_service.py
cluster/default/: namespace.yaml
cluster/ingress/dev/: ingress.yaml
cluster/server/dev/: server-configmap.yaml  server-depl.yaml  server-postgres.yaml  server-redis.yaml  server-secrets.yaml
