[metadata]
description-file = README.md

#coverage
[coverage:report]
fail_under = 80
show_missing = True

#flake8
[flake8]
max-line-length = 100

#mypy
[mypy]
ignore_missing_imports = True

[mypy-tests]
ignore_errors = True

#pytest
[tool:pytest]
addopts = --flake8 --mypy --cov=src --cov-report xml:cov.xml --cov-report term --strict-markers -vv -x
markers =
        exemplo
